--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <!-- saved from url=(0125)file://localhost/private/var/folders/rp/n2mpfd3d3816h0s410lb33th0000gn/T/TemporaryItems/Word%20Work%20File%20D_1180654684.htm -->
 <html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:m="http://schemas.microsoft.com/office/2004/12/omml" xmlns:css="http://macVmlSchemaUri" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv="Content-Type" content="text/html; charset=macintosh">
 <meta name="Title" content="">
