--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
     The data already presented in this document ABSOLUTELY SHOULD be enough
     proof to convince ANY intelligent adult from a Western country that
     SARS-COV-2 (or its direct ancestor before mutation in humans) almost
-    DEFINITELY was leaked from a chinese research lab Wuhan.
+    DEFINITELY was leaked from a chinese research lab in Wuhan.
 </p>
 <p>
     <br/>
