--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     (Explaining the science to the public, governments, and World media)
 </p>
 <p align="center">
-    (Version 1.01a April 10, 2020)
+    (Version 1.01a April 10, 2020)<br>
+READERS ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIENCE FOUNDATION:
+<br>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick" />
+<input type="hidden" name="hosted_button_id" value="KH689TCXH7YRL" />
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+</form>
+
 </p>
 <p>
     <br/>
