--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<body align="center">
 <p align="center">
     <strong>EXPOSING THE LIKELY WUHAN LAB LEAK OF SARS-COV-2/COVID-19</strong>
 </p>
@@ -9,12 +11,14 @@
     (Version 1.01a April 10, 2020)<br>
 READERS ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIENCE FOUNDATION:
 <br>
+<center>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="KH689TCXH7YRL" />
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
 </form>
+</center>
 
 </p>
 <p>
