--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<body align="center">
+<center>
 <p align="center">
     <strong>EXPOSING THE LIKELY WUHAN LAB LEAK OF SARS-COV-2/COVID-19</strong>
 </p>
@@ -21,6 +21,7 @@ READERS ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIENCE FOUNDATION:
 </center>
 
 </p>
+    
 <p>
     <br/>
     After weeks of research and an email discussion with a well known Harvard
