--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 <p align="center">
 	(Version 1.02 April 18, 2020)
 </p>
+<br>
+<center>
+READERS (ESPECIALLY NEWS COMPANIES) ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIENCE FOUNDATION USING THIS BUTTON:
+
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick" />
+<input type="hidden" name="hosted_button_id" value="KH689TCXH7YRL" />
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+</form>
+<br>
+<p>Donations to that foundation are processed through Paypal.</p>
+</center>
 <p>
 	<br/>
 	After weeks of research and an email discussion with a well known Harvard
@@ -14,7 +27,10 @@
 	in logical format so that every country and media company in the World can
 	understand how SARS-COV-2 (cause of COVID-19), or its direct ancestor
 	before mutation in humans, was likely leaked from a Wuhan lab into the
-	public.
+	public. The data here is presented anonymously, partially because the
+	chinese communist party may have intentionally leaked COVID-19 and
+	partially because many bio-research labs may (and should) be closed based
+	on some of the data presented here.
 </p>
 <p>
 	<br/>
@@ -498,45 +514,39 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 	launched earlier in April of 2020. There is more data that can be added,
 	but it hopefully seems BLATANTLY OBVIOUS that there is a 99.99999999%
 	probability or higher that SARS-COV-2/COVID19 leaked from a Wuhan
-	bio-research lab, so it seems unnecessary to add any more data on the
-	topic. More data may be added later anyway though. Again, readers
-	(especially media industry professionals using this document as a basis for
-	any articles that would be behind paywalls) are encouraged to make a
-	donation to MY favorite charitable science foundation by using the Paypal
-	"DONATE" button near the top of this document. Thanks for doing so.
+	bio-research lab, so it seems unnecessary to add more data to this paper on
+	that topic. More data may still be added as it is discovered.
+</p>
+<p>
+	NOTE: I previously tutored Stanford doctoral students (PHD students) and
+	while on Stanford campus had warned some Stanford officials that some of
+	the students from china were probably attending Stanford on the chinese
+	government's payroll. I had stated multiple times that it was extremely
+	foolish for universities in the US to have allowed students from china,
+	because many were probably having tuitions paid by the chinese government
+	in an attempt to copy Western technology for the purpose of subjugating
+	chinese citizens and also for military purposes. Basically chinese
+	universities in china did not (and almost definitely still do not) have
+	ANYTHING of any major worth to teach any Western students. So in the US the
+	leftist "be nice to those sad, underprivileged students from china"
+	attitudes of some US universities were OBVIOUSLY being BLATANTLY exploited
+	by the chinese government (and, as of April 17, 2020, still are being
+	exploited by the chinese government). Sadly the communist chinese
+	government has been using multiple features of Western democracies as ways
+	to attack and exploit Western countries. The use of chinese state media
+	videos on youtube and the hordes of chinese "wumao" (paid propaganda
+	employees of the chinese government) posting on Western social media such
+	as twitter, reddit, quora, etcetera, is a very large example of that
+	problem.
+</p>
+<p>
+	Again, readers are encouraged to make a donation to MY favorite charitable
+	science foundation by using the Paypal "DONATE" button near the top of this
+	document. News media companies (and journalists publishing articles behind
+	paywalls) are especially urged to donate through Paypal using the yellow
+	button above. Thanks for supporting ethical research by doing so.
 </p>
 <p align="center">
 	<br/>
 I can be contacted by email at:	<a href="mailto:MyEnglishFriend@gmail.com">MyEnglishFriend@gmail.com</a>
-</p>
-<p align="center">
-	SOME OBSERVATIONS OF OBVIOUS POTENTIAL POLITICAL MOTIVATIONS:
-</p>
-<p>
-	The past 2 or more years the chinese economy has generally been getting
-	worse and worse. Basically the chinese government has been nose-diving into
-	a flaming dumpster. 8 continuous months of extreme protests in Hong Kong
-	(and some in china) right before the longest chinese holiday of the year in
-	china certainly would seem to be a moment a corrupt chinese government
-	(fearful of a revolution overthrowing the chinese communist party during
-	that long holiday) would possibly have considered doing something as
-	extreme (to skeptics) as leaking a coronavirus into the chinese public. It
-	is impossible to ignore those facts and also the fact that the chinese
-	government (seemingly knowing fully that there was a SARS level epidemic
-	already spreading in Wuhan, the city that is basically located in the
-	center of the main cities of china) allowed the chinese new year migration
-	to occur in china (AND INTERNATIONALLY) and spread the epidemic across
-	china (and to locations in America where the largest chinese population in
-	the Western hemisphere is located). If the Wuhan lab leak was actually
-	accidental and not intentional, then the negligence and spread of that
-	epidemic and pandemic was still intentionally done by the chinese
-	government, unless it is really that extremely inept. Because of that
-	epidemic in china, mainland chinese citizens are more controlled and
-	monitored than before the epidemic started. For instance, when riding the
-	metro in china now, each of the chinese passengers register with personal
-	ID. It is OBVIOUS that the chinese government has exploited the epidemic to
-	add some extra proverbial leashes onto the chinese citizens. The main
-	purpose of the corrupt chinese government doing such things to the chinese
-	would be to attempt to avert chinese citizens from organizing a revolution
-	to overthrow the extremely corrupt chinese communist party.
 </p>
