--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <br>
 <center>
 READERS (ESPECIALLY NEWS COMPANIES) ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIENCE FOUNDATION USING THIS BUTTON:
+<br>
+<p>(Donations to that science foundation are processed through PayPal.)</p>
 
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
@@ -17,8 +19,7 @@ READERS (ESPECIALLY NEWS COMPANIES) ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIE
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
 </form>
-<br>
-<p>Donations to that foundation are processed through Paypal.</p>
+
 </center>
 <p>
 	<br/>
