--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ replicate efficiently in primary human airway cells and achieve	<em>in vitro</em
 	backbone can efficiently use multiple orthologs of the SARS receptor human
 	angiotensin converting enzyme II (ACE2), replicate efficiently in primary
 	human airway cells and achieve in vitro titers equivalent to epidemic
-	strains of SARS-CoV.
+	strains of SARS-CoV."
 </p>
 <p>
 	And also from that paper(c): "Additionally, <em>in vivo</em> experiments
@@ -145,31 +145,11 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 	some protests in hong kong (and some in southern china, where the hong kong
 	protest slogans and hong kong style protests had reportedly started
 	spreading) in the month of November 2019, that question is EXTREMELY
-	important. Also the US had signed the Hong Kong Democracy Act into effect
-	in November of 2019. Basically the first known patient was in Wuhan(d) and
+	important. Basically the first known patient was in Wuhan(d) and
 	had reportedly showed symptoms of COVID-19 on December 1, 2019. Thus that
 	patient would have probably received SARS-COV-2/COVID-19 sometime in mid to
 	late November, according to known statistics about incubation duration of
-	COVID-19. There DEFINITELY seems to be a possibility SARS-COV-2 could have
-	been leaked intentionally as a way to prevent a revolution during the
-	longest chinese holiday of the year. The fact that the chinese government
-	INTENTIONALLY delayed notifying chinese citizens and the World of the
-	human-to-human transmission of COVID19 and KNOWINGLY allowed the largest
-	annual migration IN THE WORLD to happen in 2020 (chinese migrating for the
-	chinese new year holiday) is OBVIOUS proof. Because of COVID19, the
-	protests in hong kong have calmed and no revolution happened in china
-	during the chinese new year holiday in 2020.
-</p>
-<p>
-	In addition, according to Wikipedia statistics, the largest population of
-	chinese in the Western hemisphere is located in the US in New York. So
-	millions of chinese propagated COVID-19 in china during that chinese new
-	year migration and more than 400,000 passengers reportedly flew from china
-	to America in early 2020. All of the initial areas in America that had
-	highest number of COVID19 cases were areas where there were large chinese
-	populations (or were on the Canadian border near large chinese populations
-	in Canada). When the facts are so BLATANTLY OBVIOUS, there is no conspiracy
-	theory necessary.
+	COVID-19. However, this research paper is focused on the scientific research of Wuhan lab employees and is not focused on the political motivations for the chinese government to have possibly intentionally leaked COVID-19. 
 </p>
 <p>
 	a.
