--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<strong>EXPOSING THE LIKELY WUHAN LAB LEAK OF SARS-COV-2/COVID-19</strong>
 </p>
 <p align="center">
-	(Explaining the science to the public, governments, and World media)
+	(Official report explaining the science to the public, governments, and World media)
 </p>
 <p align="center">
 	(Version 1.02 April 18, 2020)
