--- a/index.html
+++ b/index.html
@@ -524,13 +524,17 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 	problem.
 </p>
 <p>
-	Again, readers are encouraged to make a donation to MY favorite charitable
-	science foundation by using the Paypal "DONATE" button near the top of this
-	document. News media companies (and journalists publishing articles behind
-	paywalls) are especially urged to donate through Paypal using the yellow
-	button above. Thanks for supporting ethical research by doing so.
+	Again, readers are encouraged to make a donation to a charitable
+	science foundation by using the Paypal "DONATE" button below (it is the same as the button at the top of this document). News media companies (and journalists publishing articles behind
+	paywalls) are especially urged to donate. Thanks for supporting ethical research by doing so.
 </p>
 <p align="center">
+	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick" />
+<input type="hidden" name="hosted_button_id" value="KH689TCXH7YRL" />
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+</form>
 	<br/>
 I can be contacted by email at:	<a href="mailto:MyEnglishFriend@gmail.com">MyEnglishFriend@gmail.com</a>
 </p>
