--- a/index.html
+++ b/index.html
@@ -526,9 +526,11 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 <p>
 	Again, readers are encouraged to make a donation to a charitable
 	science foundation by using the Paypal "DONATE" button below (it is the same as the button at the top of this document). News media companies (and journalists publishing articles behind
-	paywalls) are especially urged to donate. Thanks for supporting ethical research by doing so.
+	paywalls) are especially urged to donate. 
 </p>
-<center>
+<p>
+Thanks for supporting ethical research by doing so.
+</p>
 	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="KH689TCXH7YRL" />
