--- a/index.html
+++ b/index.html
@@ -1,47 +1,49 @@
+<!DOCTYPE html> 
+<html> 
+<!-- <center> -->
+<body style="background-color:#EEEEEE">
 <p align="center">
 	<strong>EXPOSING THE LIKELY WUHAN LAB LEAK OF SARS-COV-2/COVID-19</strong>
 </p>
 <p align="center">
-	(Official report explaining the science to the public, governments, and World media)
+	(Scientific report worded in lay terms to explain the science to the public, governments, and World media)
 </p>
 <p align="center">
 	(Version 1.02 April 18, 2020)
 </p>
-<br>
+<br/>
 <center>
 READERS (ESPECIALLY NEWS COMPANIES) ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIENCE FOUNDATION USING THIS BUTTON:
-<br>
-<p>(Donations to that science foundation are processed through PayPal.)</p>
-
+<br/>
+<p align="center">(Donations to that science foundation are processed through PayPal.)</p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="KH689TCXH7YRL" />
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
 </form>
-
 </center>
+<p align="center">
+	<strong>INTRODUCTION:</strong>
+</p>
 <p>
-	<br/>
 	After weeks of research and an email discussion with a well known Harvard
 	PHD molecular biologist on the topic, this research data is gathered here
-	in logical format so that every country and media company in the World can
-	understand how SARS-COV-2 (cause of COVID-19), or its direct ancestor
-	before mutation in humans, was likely leaked from a Wuhan lab into the
+	in logical format for the public, governments, and media companies in every country in the World to understand how SARS-COV-2 (cause of COVID-19), or its direct ancestor
+	before mutation in humans, very probably "escaped" from a Wuhan lab into the
 	public. The data here is presented anonymously, partially because the
 	chinese communist party may have intentionally leaked COVID-19 and
-	partially because many bio-research labs may (and should) be closed based
+	partially because many virology research labs may (and should) be closed based
 	on some of the data presented here.
 </p>
 <p>
-	<br/>
-	NOTE: Sadly some in the bio-research industry (such as Peter Daszak) have
+	NOTE: Sadly some in the virology research industry (such as Peter Daszak) have
 	seemingly been attempting to use a smokescreen of "it looks natural, not
 	engineered" as a way to protect controversial "gain-of-function" virology
-	research funding, as some bio-research labs will likely close once the
-	majority of the public knows that SARS-COV-2 almost DEFINITELY leaked from
-	a Wuhan research lab (approximately 99.99999% likelihood currently, based
-	on publicly available data). Breeding enhanced variations of viruses in a
+	research funding, as some virology research labs will likely close once the
+	majority of the public knows that there is about approximately 99.99999% probability (based
+	on data currently publicly available) that SARS-COV-2/COVID19 "escaped" from
+	a Wuhan research lab. Breeding enhanced variations of viruses in a
 	lab by infecting multiple ferrets (or other animals with ACE2 receptors
 	similar to humans), and selecting resulting viral mutations from that
 	group, is seemingly a relatively common way to do "gain of function"
@@ -78,6 +80,7 @@ READERS (ESPECIALLY NEWS COMPANIES) ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIE
 	bat carrying it) was collected from or near Yunnan, according to some of
 	that Wuhan lab's research papers.
 </p>
+<br/>
 <p>
 	Richard H. Ebright (a well known Harvard PHD molecular biologist and
 	documented on Wikipedia as "the Board of Governors Professor of Chemistry
@@ -177,6 +180,7 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 		https://www.sciencedaily.com/releases/2020/01/200131114753.htm
 	</a>
 </p>
+<br/>
 <p>
 	2. There is PLENTY of precedent showing that research lab safety in china
 	is and has been a MAJOR risk to the World. Sadly MANY chinese lab employees
@@ -219,7 +223,8 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 	</a>
 </p>
 <p>
-	3. <strong>The Wuhan Institute of Virology</strong> (well known in
+<br/>
+	3. The Wuhan Institute of Virology (well known in
 	bio-research community for gathering and studying bat coronaviruses)
 	contains the first (and possibly still the ONLY) BSL-4 (bio-safety level 4)
 	research lab in china. That lab is located approximately 12km from the
@@ -255,7 +260,7 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 	<a
 		href="https://www.google.com/maps/dir/Huanan+Seafood+Market,+Fazhan+Avenue,+Jianghan+District,+Wuhan,+Hubei,+China/China,+CN+%E6%B9%96%E5%8C%97%E7%9C%81+%E6%AD%A6%E6%B1%89%E5%B8%82+%E6%AD%A6%E6%98%8C%E5%8C%BA+%E5%B0%8F%E6%B4%AA%E5%B1%B1%E4%B8%AD%E5%8C%BA44%E5%8F%B7+Wuhan+Institute+of+Virology,+CAS:+Hubei+Engineering+and+Technology+Research+Center+for+Viral+Diseases+%E9%82%AE%E6%94%BF%E7%BC%96%E7%A0%81:+430071/@30.5772474,114.2715533,13z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x342eaeb553b58fd7:0x355ff7d1fe8e8fb7!2m2!1d114.2622935!2d30.6165888!1m5!1m1!1s0x342ea56945e84d71:0x402ec92fd18fef96!2m2!1d114.3508524!2d30.5391912!3e2"
 	>
-		https://www.google.com/maps/dir/Huanan+Seafood+Market,+Fazhan+Avenue,+Jianghan+District,+Wuhan,+Hubei,+China/China,+CN+%E6%B9%96%E5%8C%97%E7%9C%81+%E6%AD%A6%E6%B1%89%E5%B8%82+%E6%AD%A6%E6%98%8C%E5%8C%BA+%E5%B0%8F%E6%B4%AA%E5%B1%B1%E4%B8%AD%E5%8C%BA44%E5%8F%B7+Wuhan+Institute+of+Virology,+CAS:+Hubei+Engineering+and+Technology+Research+Center+for+Viral+Diseases+%E9%82%AE%E6%94%BF%E7%BC%96%E7%A0%81:+430071/@30.5772474,114.2715533,13z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x342eaeb553b58fd7:0x355ff7d1fe8e8fb7!2m2!1d114.2622935!2d30.6165888!1m5!1m1!1s0x342ea56945e84d71:0x402ec92fd18fef96!2m2!1d114.3508524!2d30.5391912!3e2
+		A map showing approximate distance. 
 	</a>
 </p>
 <p>
@@ -264,6 +269,7 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 		https://en.wikipedia.org/wiki/Biosafety_level
 	</a>
 </p>
+<br/>
 <p>
 	4. Sadly the Wuhan Institute of Virology (according it its official
 	website) also has "different biosafety level laboratories for working on
@@ -282,6 +288,7 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 		https://thebulletin.org/2020/03/experts-know-the-new-coronavirus-is-not-a-bioweapon-they-disagree-on-whether-it-could-have-leaked-from-a-research-lab/
 	</a>
 </p>
+<br/>
 <p>
 	5. The Wuhan WHCDC is another research lab in Wuhan that is less than 1.5km
 	from that Huanan Seafood Wholesale market (actually the chinese government
@@ -308,6 +315,7 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 		https://web.archive.org/web/20200214144447/https:/www.researchgate.net/publication/339070128_The_possible_origins_of_2019-nCoV_coronavirus
 	</a>
 </p>
+<br/>
 <p>
 	6. A researcher at the Wuhan Institute of Virology named Zhengli Shi (AKA:
 	"the bat woman" (a)) is also listed as an author and team member on a 2015
@@ -360,6 +368,7 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 		https://www.sciencedirect.com/science/article/pii/S2590053619300308
 	</a>
 </p>
+<br/>
 <p>
 	7. That is OBVIOUSLY a mountain of peer reviewed scientific proof already
 	presented in this paper. This section is added to further clarify some of
@@ -474,6 +483,7 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 		https://www.nature.com/articles/nature12711
 	</a>
 </p>
+<br/>
 <p>
 	8. On February 15, 2020, china's "ministry of science and technology"
 	(title translated with google translate) announced new increased safety
@@ -493,13 +503,17 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 		https://m.weibo.cn/status/4472279494397052
 	</a>
 </p>
+<br/>
+<p align="center">
+	<strong>CONCLUSION:</strong>
+</p>
 <p>
-	That completes version 1.02 of this document. The first version was
-	launched earlier in April of 2020. There is more data that can be added,
-	but it hopefully seems BLATANTLY OBVIOUS that there is a 99.99999999%
-	probability or higher that SARS-COV-2/COVID19 leaked from a Wuhan
-	bio-research lab, so it seems unnecessary to add more data to this paper on
-	that topic. More data may still be added as it is discovered.
+	That completes this iteration of this document. The first version was
+	launched in early April of 2020. Hopefully now it is BLATANTLY OBVIOUS (based on the scientific data presented in this document) that there is about 99.99999999%
+	probability or higher that SARS-COV-2/COVID19 "escaped" from a Wuhan
+	virology research lab. There is already more proof that can be added to this document,
+	although it seems unnecessary to add more data to this document on
+	that topic. That said, more scientific proof may be added to this document soon. 
 </p>
 <p>
 	NOTE: I previously tutored Stanford doctoral students (PHD students) and
@@ -524,12 +538,12 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 	problem.
 </p>
 <p>
-	Again, readers are encouraged to make a donation to a charitable
+	Readers are encouraged to make a donation to a charitable
 	science foundation by using the Paypal "DONATE" button below (it is the same as the button at the top of this document). News media companies (and journalists publishing articles behind
 	paywalls) are especially urged to donate. 
 </p>
 <p align="center">
-Thanks for supporting ethical research by doing so.
+Thanks for supporting ethical research by doing so!
 </p>
 <center>
 	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -541,6 +555,7 @@ Thanks for supporting ethical research by doing so.
 </center>
 <p align="center">
 	
-	<br/>
-I can be contacted by email at:	<a href="mailto:MyEnglishFriend@gmail.com">MyEnglishFriend@gmail.com</a>
+<br/>
+I can be contacted by email here: <a href="mailto:MyEnglishFriend@gmail.com">EMAIL</a>
 </p>
+</body>
