--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ READERS (ESPECIALLY NEWS COMPANIES) ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIE
 </form>
 </center>
 <p align="center">
-	<strong>INTRODUCTION:</strong>
+	<strong>INTRODUCTION</strong>
 </p>
 <p>
 	After weeks of research and an email discussion with a well known Harvard
@@ -52,12 +52,11 @@ READERS (ESPECIALLY NEWS COMPANIES) ARE ENCOURAGED TO DONATE TO MY FAVORITE SCIE
 	enhanced bat coronavirus would look very "natural".
 </p>
 <p align="center">
-	<strong>MAIN RESEARCH DATA:</strong>
+	<strong>MAIN RESEARCH DATA</strong>
 </p>
 <p align="center">
-	(How SARS-COV-2 Likely Leaked From A Wuhan Virology Research Lab)
-</p>
-<p align="center">
+	How SARS-COV-2/COVID19 very probably "escaped" into the public from a virology research lab in Wuhan:
+	<br/>
 	(Presented in a way to be more easily understandable by the adult public
 	and media in Western nations)
 </p>
@@ -505,7 +504,7 @@ and demonstrate robust viral replication both <em>in vitro</em> and	<em>in vivo<
 </p>
 <br/>
 <p align="center">
-	<strong>CONCLUSION:</strong>
+	<strong>CONCLUSION</strong>
 </p>
 <p>
 	That completes this iteration of this document. The first version was
